--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,16 @@ dependencies:
   flutter:
     sdk: flutter
   hive_flutter: ^1.1.0
+  image_gallery_saver: ^1.7.1
+  path: ^1.8.3
   path_provider: ^2.0.13
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   build_runner: ^2.3.3
   flutter_lints: ^2.0.0
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
   hive_generator: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
